--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Wrapper for Jena TDB command line tools",
   "main": "index.js",
   "scripts": {
-    "pretest": "standard",
-    "test": "jest --maxWorkers=1 --testTimeout=10000"
+    "pretest": "",
+    "test": "standard && mocha --timeout=20000"
   },
   "repository": {
     "type": "git",
@@ -24,17 +24,19 @@
   },
   "homepage": "https://github.com/bergos/jena-tdb",
   "dependencies": {
-    "@rdfjs/dataset": "^1.0.1",
+    "@rdfjs/data-model": "^1.1.2",
     "@rdfjs/parser-n3": "^1.1.3",
     "@rdfjs/serializer-ntriples": "^1.0.2",
+    "duplex-to": "^1.0.0",
     "get-stream": "^5.1.0",
-    "sparqljson-parse": "^1.5.0",
+    "readable-stream": "^3.6.0",
+    "sparql-http-client": "^2.2.0",
     "tmp-promise": "^2.0.2"
   },
   "devDependencies": {
-    "jest": "^24.8.0",
+    "mocha": "^7.1.1",
     "rdf-ext": "^1.3.0",
-    "standard": "^13.1.0",
-    "tbbt-ld": "^1.1.0"
+    "standard": "^14.3.3",
+    "tbbt-ld": "1.1.0"
   }
 }
